--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,7 +83,7 @@ input, select, textarea {
 	}
 
 	body {
-		background: rgb(0, 0, 0);
+		background: rgb(255, 255, 255);
 		overflow: hidden;
 	}
 
@@ -113,7 +113,7 @@ input, select, textarea {
 		-ms-transition: border-color 0.2s ease-in-out;
 		transition: border-color 0.2s ease-in-out;
 		border-bottom: dotted 1px;
-		color: inherit;
+		color: rgb(116, 228, 24);
 		outline: 0;
 		text-decoration: none;
 	}
